<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="15dp"
    android:background="@drawable/backgr_main"
    tools:context=".LoginActivitty">

    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/ic_people"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_back"
        android:layout_marginTop="20dp"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title2"
        android:textColor="@color/colorGray"
        android:textSize="16sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/backgr_edit_text"
        android:drawableStart="@drawable/ic_username"
        android:drawablePadding="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:hint="@string/tvusername"
        android:textColorHint="@color/colorPink4"
        android:textColor="@color/colorPink3"
        android:textSize="16sp"
        android:inputType="text"
        />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/backgr_edit_text"
        android:drawableStart="@drawable/ic_password"
        android:drawablePadding="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:hint="@string/password"
        android:textColorHint="@color/colorPink4"
        android:textColor="@color/colorPink3"
        android:inputType="textPassword"
        android:textSize="16sp"/>

    <Button
        android:id="@+id/btnLoginUser"
        android:layout_width="match_parent"
        android:layout_marginTop="50dp"
        android:layout_height="50dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/backgr_button"
        android:text="@string/login"
        android:textColor="@color/colorWhite"
        android:textStyle="normal"
        android:textSize="18sp"/>

</LinearLayout>