<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlack"
    android:padding="40dp"
    tools:context=".HitungFisikaActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="@string/luas"
        android:textColor="@color/colorPink1"
        android:paddingRight="5dp"
        android:paddingLeft="5dp"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPink2"
        android:layout_marginBottom="20dp"/>

    <EditText
        android:id="@+id/etPanjangLs"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/backgr_edit_text"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:hint="@string/panjang"
        android:textColorHint="@color/colorPink4"
        android:textColor="@color/colorPink3"
        android:textSize="18sp"
        android:inputType="number"
        />

    <EditText
        android:id="@+id/etLebarLs"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/backgr_edit_text"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:hint="@string/lebar"
        android:textColorHint="@color/colorPink4"
        android:textColor="@color/colorPink3"
        android:textSize="18sp"
        android:inputType="number"
        />

    <Button
        android:id="@+id/btnHasilLs"
        android:layout_width="match_parent"
        android:layout_marginTop="30dp"
        android:layout_height="50dp"
        android:background="@drawable/backgr_button"
        android:text="@string/hasil"
        android:textColor="@color/colorWhite"
        android:textStyle="normal"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/tvHasilLuas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="@string/hasil_luas"
        android:textColor="@color/colorPink2"
        android:paddingRight="5dp"
        android:paddingLeft="5dp"
        android:visibility="gone"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="@string/volume"
        android:layout_marginTop="30dp"
        android:textColor="@color/colorPink1"
        android:paddingRight="5dp"
        android:paddingLeft="5dp"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPink2"
        android:layout_marginBottom="20dp"/>

    <EditText
        android:id="@+id/etPanjangVl"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/backgr_edit_text"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:hint="@string/panjang"
        android:textColorHint="@color/colorPink4"
        android:textColor="@color/colorPink3"
        android:textSize="18sp"
        android:inputType="number"
        />

    <EditText
        android:id="@+id/etLebarVl"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/backgr_edit_text"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:hint="@string/lebar"
        android:textColorHint="@color/colorPink4"
        android:textColor="@color/colorPink3"
        android:textSize="18sp"
        android:inputType="number"
        />

    <EditText
        android:id="@+id/etTinggiVl"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/backgr_edit_text"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:hint="@string/tinggi"
        android:textColorHint="@color/colorPink4"
        android:textColor="@color/colorPink3"
        android:textSize="18sp"
        android:inputType="number"
        />

    <Button
        android:id="@+id/btnHasilVl"
        android:layout_width="match_parent"
        android:layout_marginTop="30dp"
        android:layout_height="50dp"
        android:background="@drawable/backgr_button"
        android:text="@string/hasil"
        android:textColor="@color/colorWhite"
        android:textStyle="normal"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/tvHasilVolume"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="@string/hasil_volume"
        android:textColor="@color/colorPink2"
        android:paddingRight="5dp"
        android:paddingLeft="5dp"
        android:visibility="gone"
        />
    </LinearLayout>
</ScrollView>